RESOLVED FIXED155384
assignments in for-in/for-of header not allowed
https://bugs.webkit.org/show_bug.cgi?id=155384
Summary assignments in for-in/for-of header not allowed
Saam Barati
Reported 2016-03-11 15:14:07 PST
...
Attachments
patch (13.43 KB, patch)
2016-03-11 16:49 PST, Saam Barati
darin: review+
Saam Barati
Comment 1 2016-03-11 16:49:33 PST
Darin Adler
Comment 2 2016-03-13 14:41:39 PDT
Comment on attachment 273785 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=273785&action=review > Source/JavaScriptCore/parser/ASTBuilder.h:185 > + bool isNewTarget(ExpressionNode* expr) { return expr->isNewTarget(); } I suggest either the word "expression" or the word "node" rather than the abbreviation "expr". > Source/JavaScriptCore/parser/Nodes.h:562 > + bool isNewTarget() const override { return true; } We’ve been choosing to “final” rather than “override” in cases like this one in our virtual function style discussions for the WebKit project. Also, should just make it private since there’s no point calling it if you already have a reference or pointer to a NewTargetNode.
Saam Barati
Comment 3 2016-03-14 11:38:55 PDT
Thanks for the review. I made the suggestions you recommended. landed in: http://trac.webkit.org/changeset/198144
Note You need to log in before you can comment on or make changes to this bug.